* update navbar layout * fix navbar issue on mobile screen

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -31,6 +31,13 @@
   gap: 12px;
 }
 
+.search-container {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 12px;
+  align-items: center;
+}
+
 .filter-dropdown {
   padding: 11px 24px !important;
   border: 1px solid #d3d1d1;
@@ -156,7 +163,7 @@
   gap: 30px;
 }
 
-.navbar-left > div {
+.navbar-left>div {
   display: flex;
   align-items: center;
   gap: 30px;
@@ -183,7 +190,12 @@
 }
 
 .navbar-options {
-  height: 45px;
+  height: 50px;
+  width: auto;
+}
+
+.filter-icon {
+  height: 40px;
   width: auto;
 }
 
@@ -300,7 +312,7 @@
     gap: 15px;
   }
 
-  .navbar-left > div {
+  .navbar-left>div {
     gap: 15px;
   }
 
@@ -333,13 +345,10 @@
 }
 
 @media screen and (max-width: 767px) {
-  .navbar-item {
-    display: none;
-  }
-
   .navbar-button {
     display: block;
   }
+
   .mobile-menu-icon {
     display: block;
   }
@@ -350,10 +359,6 @@
 
   .navbar-title {
     padding-left: 20px;
-  }
-
-  .search-container {
-    display: none;
   }
 
   .search-container-filter {
@@ -370,13 +375,14 @@
 
   .navbar-links {
     margin-top: 0;
+    gap: 5px;
   }
 
   .navbar-left {
     gap: 13px;
   }
 
-  .navbar-left > div {
+  .navbar-left>div {
     gap: 13px;
   }
 
@@ -388,24 +394,16 @@
     padding: 13px 28px;
   }
 
-  .navbar-left {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-
-  .navbar-right {
-    align-items: flex-start;
-  }
-
   .nav-top {
     align-items: normal;
   }
 
-  .filters-mobile-wrapper {
-    top: 121px;
-  }
   .filters {
     top: 121px;
+  }
+
+  .filters-mobile-wrapper {
+    top: 62px;
   }
 }
 
@@ -446,7 +444,7 @@
     gap: 10px;
   }
 
-  .navbar-left > div {
+  .navbar-left>div {
     gap: 10px;
   }
 
@@ -467,12 +465,21 @@
   .navbar-logo {
     height: 25px;
   }
+
   */ .navbar-right {
     gap: 5px;
   }
 
   .dropdown-container {
     flex-direction: column;
+  }
+
+  .filter-icon {
+    height: 25px;
+  }
+
+  .navbar-links {
+    gap: 2px;
   }
 }
 
@@ -483,9 +490,14 @@
     min-width: 0;
     width: 100%;
   }
+
+  .navbar-logo {
+    height: 22px;
+  }
 }
 
 @media screen and (max-width: 568px) {
+
   /* Navbar wrapper for mobile */
   .navbar-mobile-wrapper {
     position: fixed;
@@ -493,7 +505,7 @@
     left: 0;
     right: 0;
     z-index: 1010;
-    transition: top 0.3s ease;
+    transition: top 0.2s ease;
   }
 
   .navbar-mobile-wrapper.navbar-visible {
@@ -505,10 +517,10 @@
     position: sticky;
     top: 0;
     z-index: 1000;
-    transition: top 0.3s ease;
+    transition: top 0.2s ease;
   }
 
   .filters-mobile-wrapper.filters-with-navbar {
-    top: 78px;
+    top: 44px;
   }
 }
