--- a/src/components/ProjectsView/index.css
+++ b/src/components/ProjectsView/index.css
@@ -259,7 +259,7 @@
 
 @media screen and (max-width: 1231px) {
   .map-container {
-    top: 85px;
+    top: 156px;
   }
 }
 
